--- a/portfolio.html
+++ b/portfolio.html
@@ -18,28 +18,28 @@
 <!--шапка-->
 <header class="page-header">
     <!--навігація-->
-    <div class="container gen-nav">
+    <div class="container nav-wrapper">
         <nav class="main-nav">
-            <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-            <ul class="navigation list">
-                <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li class="item"><a href="" class="link">Контакты</a></li>
+            <a href="./index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
+            <ul class="navigation">
+                <li class="navigation__item"><a href="./index.html" class="navigation__link">Студия</a></li>
+                <li class="navigation__item"><a href="./portfolio.html" class="navigation__link navigation__link_current">Портфолио</a></li>
+                <li class="navigation__item"><a href="" class="navigation__link">Контакты</a></li>
             </ul>
         </nav>
         <!--контакти-->
-        <ul class="contacts list">
-            <li class="item">
-                <svg class="icon-contact" width="16" height="12">
+        <ul class="contacts">
+            <li class="contacts__item">
+                <svg class="contacts__icon" width="16" height="12">
                     <use href="./images/sprite.svg#icon-envelope"></use>
                 </svg>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="contacts__link">info@devstudio.com</a>
             </li>
-            <li class="item">
-                <svg class="icon-contact" width="10" height="16">
+            <li class="contacts__item">
+                <svg class="contacts__icon" width="10" height="16">
                     <use href="./images/sprite.svg#icon-smartphone"></use>
                 </svg>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="contacts__link">+38 096 111 11 11</a>
             </li>
         </ul>
     </div>
@@ -51,14 +51,14 @@
     <section class="section portfolio">
         <div class="container">
             <h1 class="title visibility-hidden">Портфолио</h1>
-            <ul class="menu list">
+            <ul class="menu__list">
                 <li class="menu-item"><button type="button" class="button filter current">Все</button></li>
                 <li class="menu-item"><button type="button" class="button filter">Веб-сайты</button></li>
                 <li class="menu-item"><button type="button" class="button filter">Приложения</button></li>
                 <li class="menu-item"><button type="button" class="button filter">Дизайн</button></li>
                 <li class="menu-item"><button type="button" class="button filter">Маркетинг</button></li>
             </ul>
-            <ul class="product list list-collection">
+            <ul class="product list__collection">
                 <li class="product-item item">
                     <div class="product-group"><img class="project-img" src="./images/img-1.jpg" alt="Технокряк" width="370"><p class="product-group-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p></div>
                     <div class="project-title">
@@ -134,10 +134,10 @@
 <footer class="page-footer">
     <div class="main-footer-menu container">
         <div>
-            <a href="./index.html" class="logo footer"><span class="logo-web">Web</span>Studio</a>
+            <a href="./index.html" class="logo footer"><span class="logo__web">Web</span>Studio</a>
             <address>
                 <div class="footer-menu">
-                    <ul class="adds list">
+                    <ul class="adds">
                         <li class="adds-item">
                             <a href="https://goo.gl/maps/piqngm7oDQpEDh6u6" target="_blank"
                                 rel="noopener nofollow noreferrer" class="location">г. Киев, пр-т Леси
@@ -155,7 +155,7 @@
         </div>
         <div class="footer-social-list">
             <h2 class="footer-title">присоединяйтесь</h2>
-            <ul class="social-list list">
+            <ul class="social-list">
                 <li class="social-item footer-social-item">
                     <a class="social-link" href="">
                         <svg class="social-icon footer-social-icon">
