--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                         <p class="features__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="features__item">
-                        <div class="features-box-icon">
-                            <svg class="features-box-icon__icon">
+                        <div class="features__iconbox">
+                            <svg class="features__icon">
                                 <use href="./images/sprite.svg#icon-astronaut"></use> </svg>
                         </div>
                                            
